--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ pydantic==2.7.0
 pydantic_core==2.18.1
 gunicorn==20.1.0
 react=18.2.0
+fastapi==0.78.0
+uvicorn==0.17.6
+databases==0.5.5
+asyncpg==0.24.0
+python-jose==3.3.0
+fastapi.middleware.cors==0.1.3
